--- a/docs/docs-ref-autogen/excel/excel/excel.groupshapecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.groupshapecollection.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.GroupShapeCollection:class'
     summary: |-
-      <span data-ttu-id="bdc3e-101">代表形状组中的形状集合。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-101">Represents the shape collection inside a shape group.</span></span>
+      <span data-ttu-id="fcf0a-101">代表形状组中的形状集合。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-101">Represents the shape collection inside a shape group.</span></span>
 
-      <span data-ttu-id="bdc3e-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bdc3e-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fcf0a-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fcf0a-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.GroupShapeCollection
     fullName: Excel.GroupShapeCollection
     langs:
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.GroupShapeCollection#load:member(3)'
       - 'excel!Excel.GroupShapeCollection#toJSON:member(1)'
   - uid: 'excel!Excel.GroupShapeCollection#context:member'
-    summary: <span data-ttu-id="bdc3e-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-103">The request context associated with the object.</span></span> <span data-ttu-id="bdc3e-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: <span data-ttu-id="fcf0a-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-103">The request context associated with the object.</span></span> <span data-ttu-id="fcf0a-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-104">This connects the add-in's process to the Office host application's process.</span></span>
     name: context
     fullName: context
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.GroupShapeCollection#getCount:member(1)'
     summary: |-
-      <span data-ttu-id="bdc3e-105">返回形状组中的形状数量。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-105">Returns the number of shapes in the shape group.</span></span> <span data-ttu-id="bdc3e-106">只读。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-106">Read-only.</span></span>
+      <span data-ttu-id="fcf0a-105">返回形状组中的形状数量。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-105">Returns the number of shapes in the shape group.</span></span> <span data-ttu-id="fcf0a-106">只读。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-106">Read-only.</span></span>
 
-      <span data-ttu-id="bdc3e-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bdc3e-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fcf0a-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fcf0a-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getCount()
     fullName: getCount()
     langs:
@@ -53,9 +53,9 @@ items:
         description: ''
   - uid: 'excel!Excel.GroupShapeCollection#getItem:member(1)'
     summary: |-
-      <span data-ttu-id="bdc3e-108">按名称或 ID 获取形状。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-108">Gets a shape using its Name or ID.</span></span>
+      <span data-ttu-id="fcf0a-108">按名称或 ID 获取形状。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-108">Gets a shape using its Name or ID.</span></span>
 
-      <span data-ttu-id="bdc3e-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bdc3e-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fcf0a-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fcf0a-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -69,14 +69,14 @@ items:
         description: ''
       parameters:
         - id: key
-          description: <span data-ttu-id="bdc3e-110">要检索的形状的名称或 ID。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-110">The Name or ID of the shape to be retrieved.</span></span>
+          description: <span data-ttu-id="fcf0a-110">要检索的形状的名称或 ID。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-110">The Name or ID of the shape to be retrieved.</span></span>
           type:
             - string
   - uid: 'excel!Excel.GroupShapeCollection#getItemAt:member(1)'
     summary: |-
-      <span data-ttu-id="bdc3e-111">根据其在集合中的位置获取形状。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-111">Gets a shape based on its position in the collection.</span></span>
+      <span data-ttu-id="fcf0a-111">根据其在集合中的位置获取形状。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-111">Gets a shape based on its position in the collection.</span></span>
 
-      <span data-ttu-id="bdc3e-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bdc3e-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="fcf0a-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fcf0a-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -90,11 +90,11 @@ items:
         description: ''
       parameters:
         - id: index
-          description: <span data-ttu-id="bdc3e-113">要检索的对象的从零开始的索引值。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-113">The zero-based index value of the object to be retrieved.</span></span>
+          description: <span data-ttu-id="fcf0a-113">要检索的对象的从零开始的索引值。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-113">The zero-based index value of the object to be retrieved.</span></span>
           type:
             - number
   - uid: 'excel!Excel.GroupShapeCollection#items:member'
-    summary: <span data-ttu-id="bdc3e-114">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-114">Gets the loaded child items in this collection.</span></span>
+    summary: <span data-ttu-id="fcf0a-114">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-114">Gets the loaded child items in this collection.</span></span>
     name: items
     fullName: items
     langs:
@@ -106,33 +106,25 @@ items:
         type:
           - 'excel!Excel.GroupShapeCollection#items~0:complex'
   - uid: 'excel!Excel.GroupShapeCollection#load:member(1)'
-    summary: <span data-ttu-id="bdc3e-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="bdc3e-116">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-116">You must call "context.sync()" before reading the properties.</span></span>
-    remarks: |-
-      <span data-ttu-id="bdc3e-117">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="bdc3e-117">In addition to this signature, this method has the following signatures:</span></span>
-
-      <span data-ttu-id="bdc3e-118">`load(option?: string | string[]): Excel.GroupShapeCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-118">`load(option?: string | string[]): Excel.GroupShapeCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
-
-      <span data-ttu-id="bdc3e-119">`load(option?: { select?: string; expand?: string; }): Excel.GroupShapeCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-119">`load(option?: { select?: string; expand?: string; }): Excel.GroupShapeCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
-
-      <span data-ttu-id="bdc3e-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.GroupShapeCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-120">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.GroupShapeCollection` - Only available on collection types.</span></span> <span data-ttu-id="bdc3e-121">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-121">It is similar to the preceding signature.</span></span> <span data-ttu-id="bdc3e-122">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-122">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="bdc3e-123">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-123">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="bdc3e-124">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-124">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
-    name: load(option)
-    fullName: load(option)
+    summary: <span data-ttu-id="fcf0a-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="fcf0a-116">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-116">You must call `context.sync()` before reading the properties.</span></span>
+    name: load(options)
+    fullName: load(options)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(option?: Excel.Interfaces.GroupShapeCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.GroupShapeCollection;'
+      content: 'load(options?: Excel.Interfaces.GroupShapeCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.GroupShapeCollection;'
       return:
         type:
           - 'excel!Excel.GroupShapeCollection:class'
         description: ''
       parameters:
-        - id: option
-          description: ''
+        - id: options
+          description: <span data-ttu-id="fcf0a-117">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-117">Provides options for which properties of the object to load.</span></span>
           type:
             - 'excel!Excel.GroupShapeCollection#load~0:complex'
   - uid: 'excel!Excel.GroupShapeCollection#load:member(2)'
-    summary: <span data-ttu-id="bdc3e-125">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-125">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="bdc3e-126">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-126">You must call `context.sync()` before reading the properties.</span></span>
+    summary: <span data-ttu-id="fcf0a-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="fcf0a-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-119">You must call `context.sync()` before reading the properties.</span></span>
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -146,28 +138,29 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="bdc3e-127">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-127">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: <span data-ttu-id="fcf0a-120">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-120">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.GroupShapeCollection#load:member(3)'
-    name: load(option)
-    fullName: load(option)
+    summary: <span data-ttu-id="fcf0a-121">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-121">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="fcf0a-122">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-122">You must call `context.sync()` before reading the properties.</span></span>
+    name: load(propertyNamesAndPaths)
+    fullName: load(propertyNamesAndPaths)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(option?: OfficeExtension.LoadOption): Excel.GroupShapeCollection;'
+      content: 'load(propertyNamesAndPaths?: OfficeExtension.LoadOption): Excel.GroupShapeCollection;'
       return:
         type:
           - 'excel!Excel.GroupShapeCollection:class'
         description: ''
       parameters:
-        - id: option
-          description: ''
+        - id: propertyNamesAndPaths
+          description: '<span data-ttu-id="fcf0a-123">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-123">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
           type:
             - 'excel!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.GroupShapeCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="bdc3e-128">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="bdc3e-128">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="bdc3e-129">.</span><span class="sxs-lookup"><span data-stu-id="bdc3e-129"></span></span> <span data-ttu-id="bdc3e-130">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="bdc3e-130"></span></span><!-- --><span data-ttu-id="bdc3e-131">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.GroupShapeCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.GroupShapeCollectionData`</span><span class="sxs-lookup"><span data-stu-id="bdc3e-131">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.GroupShapeCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.GroupShapeCollectionData`</span></span><!-- --><span data-ttu-id="bdc3e-132">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="bdc3e-132">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: '<span data-ttu-id="fcf0a-124">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="fcf0a-124">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="fcf0a-125">.</span><span class="sxs-lookup"><span data-stu-id="fcf0a-125"></span></span> <span data-ttu-id="fcf0a-126">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="fcf0a-126"></span></span><!-- --><span data-ttu-id="fcf0a-127">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.GroupShapeCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.GroupShapeCollectionData`</span><span class="sxs-lookup"><span data-stu-id="fcf0a-127">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Excel.GroupShapeCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.GroupShapeCollectionData`</span></span><!-- --><span data-ttu-id="fcf0a-128">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="fcf0a-128">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
     name: toJSON()
     fullName: toJSON()
     langs:
