--- a/docs/docs-ref-autogen/excel/excel/excel.image.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.image.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Image:class'
     summary: |-
-      <span data-ttu-id="83fba-101">代表工作表中的图像。</span><span class="sxs-lookup"><span data-stu-id="83fba-101">Represents an image in the worksheet.</span></span> <span data-ttu-id="83fba-102">若要获取相应的 Shape 对象，请使用 Image. Shape。</span><span class="sxs-lookup"><span data-stu-id="83fba-102">To get the corresponding Shape object, use Image.shape.</span></span>
+      <span data-ttu-id="d4409-101">代表工作表中的图像。</span><span class="sxs-lookup"><span data-stu-id="d4409-101">Represents an image in the worksheet.</span></span> <span data-ttu-id="d4409-102">若要获取相应的 Shape 对象，请使用 Image. Shape。</span><span class="sxs-lookup"><span data-stu-id="d4409-102">To get the corresponding Shape object, use Image.shape.</span></span>
 
-      <span data-ttu-id="83fba-103">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83fba-103">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d4409-103">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d4409-103">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Image
     fullName: Excel.Image
     langs:
@@ -23,7 +23,7 @@ items:
       - 'excel!Excel.Image#shape:member'
       - 'excel!Excel.Image#toJSON:member(1)'
   - uid: 'excel!Excel.Image#context:member'
-    summary: <span data-ttu-id="83fba-104">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="83fba-104">The request context associated with the object.</span></span> <span data-ttu-id="83fba-105">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="83fba-105">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: <span data-ttu-id="d4409-104">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="d4409-104">The request context associated with the object.</span></span> <span data-ttu-id="d4409-105">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="d4409-105">This connects the add-in's process to the Office host application's process.</span></span>
     name: context
     fullName: context
     langs:
@@ -36,9 +36,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.Image#format:member'
     summary: |-
-      <span data-ttu-id="83fba-106">返回图像的格式。</span><span class="sxs-lookup"><span data-stu-id="83fba-106">Returns the format of the image.</span></span> <span data-ttu-id="83fba-107">只读。</span><span class="sxs-lookup"><span data-stu-id="83fba-107">Read-only.</span></span>
+      <span data-ttu-id="d4409-106">返回图像的格式。</span><span class="sxs-lookup"><span data-stu-id="d4409-106">Returns the format of the image.</span></span> <span data-ttu-id="d4409-107">只读。</span><span class="sxs-lookup"><span data-stu-id="d4409-107">Read-only.</span></span>
 
-      <span data-ttu-id="83fba-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83fba-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d4409-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d4409-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -52,7 +52,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="83fba-109">示例</span><span class="sxs-lookup"><span data-stu-id="83fba-109">Examples</span></span>
+          #### <a name="examples"></a><span data-ttu-id="d4409-109">示例</span><span class="sxs-lookup"><span data-stu-id="d4409-109">Examples</span></span>
 
           ```typescript
           await Excel.run(async (context) => {
@@ -67,9 +67,9 @@ items:
           ```
   - uid: 'excel!Excel.Image#id:member'
     summary: |-
-      <span data-ttu-id="83fba-110">表示图像对象的形状标识符。</span><span class="sxs-lookup"><span data-stu-id="83fba-110">Represents the shape identifier for the image object.</span></span> <span data-ttu-id="83fba-111">只读。</span><span class="sxs-lookup"><span data-stu-id="83fba-111">Read-only.</span></span>
+      <span data-ttu-id="d4409-110">表示图像对象的形状标识符。</span><span class="sxs-lookup"><span data-stu-id="d4409-110">Represents the shape identifier for the image object.</span></span> <span data-ttu-id="d4409-111">只读。</span><span class="sxs-lookup"><span data-stu-id="d4409-111">Read-only.</span></span>
 
-      <span data-ttu-id="83fba-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83fba-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d4409-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d4409-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -81,33 +81,25 @@ items:
         type:
           - string
   - uid: 'excel!Excel.Image#load:member(1)'
-    summary: <span data-ttu-id="83fba-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="83fba-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="83fba-114">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="83fba-114">You must call "context.sync()" before reading the properties.</span></span>
-    remarks: |-
-      <span data-ttu-id="83fba-115">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="83fba-115">In addition to this signature, this method has the following signatures:</span></span>
-
-      <span data-ttu-id="83fba-116">`load(option?: string | string[]): Excel.Image`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="83fba-116">`load(option?: string | string[]): Excel.Image` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
-
-      <span data-ttu-id="83fba-117">`load(option?: { select?: string; expand?: string; }): Excel.Image`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="83fba-117">`load(option?: { select?: string; expand?: string; }): Excel.Image` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
-
-      <span data-ttu-id="83fba-118">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.Image`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="83fba-118">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.Image` - Only available on collection types.</span></span> <span data-ttu-id="83fba-119">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="83fba-119">It is similar to the preceding signature.</span></span> <span data-ttu-id="83fba-120">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="83fba-120">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="83fba-121">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="83fba-121">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="83fba-122">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="83fba-122">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
-    name: load(option)
-    fullName: load(option)
+    summary: <span data-ttu-id="d4409-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d4409-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d4409-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d4409-114">You must call `context.sync()` before reading the properties.</span></span>
+    name: load(options)
+    fullName: load(options)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(option?: Excel.Interfaces.ImageLoadOptions): Excel.Image;'
+      content: 'load(options?: Excel.Interfaces.ImageLoadOptions): Excel.Image;'
       return:
         type:
           - 'excel!Excel.Image:class'
         description: ''
       parameters:
-        - id: option
-          description: ''
+        - id: options
+          description: <span data-ttu-id="d4409-115">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="d4409-115">Provides options for which properties of the object to load.</span></span>
           type:
             - 'excel!Excel.Interfaces.ImageLoadOptions:interface'
   - uid: 'excel!Excel.Image#load:member(2)'
-    summary: <span data-ttu-id="83fba-123">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="83fba-123">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="83fba-124">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="83fba-124">You must call `context.sync()` before reading the properties.</span></span>
+    summary: <span data-ttu-id="d4409-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d4409-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d4409-117">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d4409-117">You must call `context.sync()` before reading the properties.</span></span>
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -121,32 +113,40 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="83fba-125">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="83fba-125">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: <span data-ttu-id="d4409-118">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="d4409-118">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.Image#load:member(3)'
-    summary: <span data-ttu-id="83fba-126">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="83fba-126">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="83fba-127">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="83fba-127">You must call `context.sync()` before reading the properties.</span></span>
+    summary: <span data-ttu-id="d4409-119">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d4409-119">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d4409-120">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d4409-120">You must call `context.sync()` before reading the properties.</span></span>
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.Image;'
+      content: |-
+        load(propertyNamesAndPaths?: {
+                    select?: string;
+                    expand?: string;
+                }): Excel.Image;
       return:
         type:
           - 'excel!Excel.Image:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="83fba-128">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="83fba-128">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '<span data-ttu-id="d4409-121">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="d4409-121">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
           type:
-            - '{ select?: string; expand?: string; }'
+            - |-
+              {
+                          select?: string;
+                          expand?: string;
+                      }
   - uid: 'excel!Excel.Image#shape:member'
     summary: |-
-      <span data-ttu-id="83fba-129">返回与图像关联的形状对象。</span><span class="sxs-lookup"><span data-stu-id="83fba-129">Returns the Shape object associated with the image.</span></span> <span data-ttu-id="83fba-130">只读。</span><span class="sxs-lookup"><span data-stu-id="83fba-130">Read-only.</span></span>
+      <span data-ttu-id="d4409-122">返回与图像关联的形状对象。</span><span class="sxs-lookup"><span data-stu-id="d4409-122">Returns the Shape object associated with the image.</span></span> <span data-ttu-id="d4409-123">只读。</span><span class="sxs-lookup"><span data-stu-id="d4409-123">Read-only.</span></span>
 
-      <span data-ttu-id="83fba-131">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83fba-131">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="d4409-124">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d4409-124">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: shape
     fullName: shape
     langs:
@@ -158,7 +158,7 @@ items:
         type:
           - 'excel!Excel.Shape:class'
   - uid: 'excel!Excel.Image#toJSON:member(1)'
-    summary: '<span data-ttu-id="83fba-132">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="83fba-132">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="83fba-133">.</span><span class="sxs-lookup"><span data-stu-id="83fba-133"></span></span> <span data-ttu-id="83fba-134">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="83fba-134"></span></span><!-- --><span data-ttu-id="83fba-135">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 图像对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ImageData`</span><span class="sxs-lookup"><span data-stu-id="83fba-135">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.Image object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ImageData`</span></span><!-- --><span data-ttu-id="83fba-136">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="83fba-136">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: '<span data-ttu-id="d4409-125">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="d4409-125">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="d4409-126">.</span><span class="sxs-lookup"><span data-stu-id="d4409-126"></span></span> <span data-ttu-id="d4409-127">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="d4409-127"></span></span><!-- --><span data-ttu-id="d4409-128">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 图像对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ImageData`</span><span class="sxs-lookup"><span data-stu-id="d4409-128">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.Image object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ImageData`</span></span><!-- --><span data-ttu-id="d4409-129">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="d4409-129">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
     name: toJSON()
     fullName: toJSON()
     langs:
