--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.nameditemdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.nameditemdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemData:interface'
-    summary: <span data-ttu-id="26fc0-101">描述通过调用 "namedItem （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="26fc0-101">An interface describing the data returned by calling "namedItem.toJSON()".</span></span>
+    summary: <span data-ttu-id="da30c-101">描述通过调用返回的数据的接口`namedItem.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="da30c-101">An interface describing the data returned by calling `namedItem.toJSON()`</span></span><!-- --><span data-ttu-id="da30c-102">.</span><span class="sxs-lookup"><span data-stu-id="da30c-102"></span></span>
     name: Excel.Interfaces.NamedItemData
     fullName: Excel.Interfaces.NamedItemData
     langs:
@@ -19,9 +19,9 @@ items:
       - 'excel!Excel.Interfaces.NamedItemData#visible:member'
   - uid: 'excel!Excel.Interfaces.NamedItemData#arrayValues:member'
     summary: |-
-      <span data-ttu-id="26fc0-102">返回包含已命名项目的值和类型的对象。</span><span class="sxs-lookup"><span data-stu-id="26fc0-102">Returns an object containing values and types of the named item.</span></span> <span data-ttu-id="26fc0-103">只读。</span><span class="sxs-lookup"><span data-stu-id="26fc0-103">Read-only.</span></span>
+      <span data-ttu-id="da30c-103">返回包含已命名项目的值和类型的对象。</span><span class="sxs-lookup"><span data-stu-id="da30c-103">Returns an object containing values and types of the named item.</span></span> <span data-ttu-id="da30c-104">只读。</span><span class="sxs-lookup"><span data-stu-id="da30c-104">Read-only.</span></span>
 
-      <span data-ttu-id="26fc0-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26fc0-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="da30c-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da30c-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: arrayValues
     fullName: arrayValues
     langs:
@@ -34,9 +34,9 @@ items:
           - 'excel!Excel.Interfaces.NamedItemArrayValuesData:interface'
   - uid: 'excel!Excel.Interfaces.NamedItemData#comment:member'
     summary: |-
-      <span data-ttu-id="26fc0-105">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="26fc0-105">Represents the comment associated with this name.</span></span>
+      <span data-ttu-id="da30c-106">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="da30c-106">Represents the comment associated with this name.</span></span>
 
-      <span data-ttu-id="26fc0-106">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26fc0-106">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="da30c-107">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da30c-107">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: comment
     fullName: comment
     langs:
@@ -49,9 +49,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.NamedItemData#formula:member'
     summary: |-
-      <span data-ttu-id="26fc0-107">获取或设置的已命名项目的公式。</span><span class="sxs-lookup"><span data-stu-id="26fc0-107">Gets or sets the formula of the named item.</span></span> <span data-ttu-id="26fc0-108">公式始终以等号 (=) 开头。</span><span class="sxs-lookup"><span data-stu-id="26fc0-108">Formula always starts with a '=' sign.</span></span>
+      <span data-ttu-id="da30c-108">获取或设置的已命名项目的公式。</span><span class="sxs-lookup"><span data-stu-id="da30c-108">Gets or sets the formula of the named item.</span></span> <span data-ttu-id="da30c-109">公式始终以等号 (=) 开头。</span><span class="sxs-lookup"><span data-stu-id="da30c-109">Formula always starts with a '=' sign.</span></span>
 
-      <span data-ttu-id="26fc0-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26fc0-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="da30c-110">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da30c-110">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: formula
     fullName: formula
     langs:
@@ -64,9 +64,9 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.NamedItemData#name:member'
     summary: |-
-      <span data-ttu-id="26fc0-110">对象的名称。</span><span class="sxs-lookup"><span data-stu-id="26fc0-110">The name of the object.</span></span> <span data-ttu-id="26fc0-111">只读。</span><span class="sxs-lookup"><span data-stu-id="26fc0-111">Read-only.</span></span>
+      <span data-ttu-id="da30c-111">对象的名称。</span><span class="sxs-lookup"><span data-stu-id="da30c-111">The name of the object.</span></span> <span data-ttu-id="da30c-112">只读。</span><span class="sxs-lookup"><span data-stu-id="da30c-112">Read-only.</span></span>
 
-      <span data-ttu-id="26fc0-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26fc0-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="da30c-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da30c-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -79,9 +79,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.NamedItemData#scope:member'
     summary: |-
-      <span data-ttu-id="26fc0-113">指明是否将 name 限定到工作簿或特定工作表。</span><span class="sxs-lookup"><span data-stu-id="26fc0-113">Indicates whether the name is scoped to the workbook or to a specific worksheet.</span></span> <span data-ttu-id="26fc0-114">可能的值为：工作表、工作簿。</span><span class="sxs-lookup"><span data-stu-id="26fc0-114">Possible values are: Worksheet, Workbook.</span></span> <span data-ttu-id="26fc0-115">只读。</span><span class="sxs-lookup"><span data-stu-id="26fc0-115">Read-only.</span></span>
+      <span data-ttu-id="da30c-114">指明是否将 name 限定到工作簿或特定工作表。</span><span class="sxs-lookup"><span data-stu-id="da30c-114">Indicates whether the name is scoped to the workbook or to a specific worksheet.</span></span> <span data-ttu-id="da30c-115">可能的值为：工作表、工作簿。</span><span class="sxs-lookup"><span data-stu-id="da30c-115">Possible values are: Worksheet, Workbook.</span></span> <span data-ttu-id="da30c-116">只读。</span><span class="sxs-lookup"><span data-stu-id="da30c-116">Read-only.</span></span>
 
-      <span data-ttu-id="26fc0-116">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26fc0-116">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="da30c-117">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da30c-117">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: scope
     fullName: scope
     langs:
@@ -94,9 +94,9 @@ items:
           - 'excel!Excel.Interfaces.NamedItemData#scope~0:complex'
   - uid: 'excel!Excel.Interfaces.NamedItemData#type:member'
     summary: |-
-      <span data-ttu-id="26fc0-117">指明 name 公式返回的值的类型。</span><span class="sxs-lookup"><span data-stu-id="26fc0-117">Indicates the type of the value returned by the name's formula.</span></span> <span data-ttu-id="26fc0-118">有关详细信息，请参阅 NamedItemType。</span><span class="sxs-lookup"><span data-stu-id="26fc0-118">See Excel.NamedItemType for details.</span></span> <span data-ttu-id="26fc0-119">只读。</span><span class="sxs-lookup"><span data-stu-id="26fc0-119">Read-only.</span></span>
+      <span data-ttu-id="da30c-118">指明 name 公式返回的值的类型。</span><span class="sxs-lookup"><span data-stu-id="da30c-118">Indicates the type of the value returned by the name's formula.</span></span> <span data-ttu-id="da30c-119">有关详细信息，请参阅 NamedItemType。</span><span class="sxs-lookup"><span data-stu-id="da30c-119">See Excel.NamedItemType for details.</span></span> <span data-ttu-id="da30c-120">只读。</span><span class="sxs-lookup"><span data-stu-id="da30c-120">Read-only.</span></span>
 
-      <span data-ttu-id="26fc0-120">\[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26fc0-120">\[ [API set: ExcelApi 1.1 for String,Integer,Double,Boolean,Range,Error; 1.7 for Array](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="da30c-121">\[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da30c-121">\[ [API set: ExcelApi 1.1 for String,Integer,Double,Boolean,Range,Error; 1.7 for Array](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: type
     fullName: type
     langs:
@@ -109,9 +109,9 @@ items:
           - 'excel!Excel.Interfaces.NamedItemData#type~0:complex'
   - uid: 'excel!Excel.Interfaces.NamedItemData#value:member'
     summary: |-
-      <span data-ttu-id="26fc0-121">表示 name 公式计算出的值。</span><span class="sxs-lookup"><span data-stu-id="26fc0-121">Represents the value computed by the name's formula.</span></span> <span data-ttu-id="26fc0-122">对于已命名区域，将返回区域地址。</span><span class="sxs-lookup"><span data-stu-id="26fc0-122">For a named range, will return the range address.</span></span> <span data-ttu-id="26fc0-123">只读。</span><span class="sxs-lookup"><span data-stu-id="26fc0-123">Read-only.</span></span>
+      <span data-ttu-id="da30c-122">表示 name 公式计算出的值。</span><span class="sxs-lookup"><span data-stu-id="da30c-122">Represents the value computed by the name's formula.</span></span> <span data-ttu-id="da30c-123">对于已命名区域，将返回区域地址。</span><span class="sxs-lookup"><span data-stu-id="da30c-123">For a named range, will return the range address.</span></span> <span data-ttu-id="da30c-124">只读。</span><span class="sxs-lookup"><span data-stu-id="da30c-124">Read-only.</span></span>
 
-      <span data-ttu-id="26fc0-124">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26fc0-124">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="da30c-125">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da30c-125">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: value
     fullName: value
     langs:
@@ -124,9 +124,9 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.NamedItemData#visible:member'
     summary: |-
-      <span data-ttu-id="26fc0-125">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="26fc0-125">Specifies whether the object is visible or not.</span></span>
+      <span data-ttu-id="da30c-126">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="da30c-126">Specifies whether the object is visible or not.</span></span>
 
-      <span data-ttu-id="26fc0-126">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="26fc0-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="da30c-127">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="da30c-127">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
