--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotItemUpdateData:interface'
-    summary: '<span data-ttu-id="424fd-101">一个用于更新 PivotItem 对象上的数据的接口，可用于 "pivotItem （</span><span class="sxs-lookup"><span data-stu-id="424fd-101">An interface for updating data on the PivotItem object, for use in "pivotItem.set(</span></span><!-- --><span data-ttu-id="424fd-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="424fd-102"></span></span><!-- --><span data-ttu-id="424fd-103">)".</span><span class="sxs-lookup"><span data-stu-id="424fd-103"></span></span>'
+    summary: '<span data-ttu-id="277b5-101">一个用于更新 PivotItem 对象上的数据的接口，可用于`pivotItem.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="277b5-101">An interface for updating data on the PivotItem object, for use in `pivotItem.set({ ... })`</span></span><!-- --><span data-ttu-id="277b5-102">.</span><span class="sxs-lookup"><span data-stu-id="277b5-102"></span></span>'
     name: Excel.Interfaces.PivotItemUpdateData
     fullName: Excel.Interfaces.PivotItemUpdateData
     langs:
@@ -14,9 +14,9 @@ items:
       - 'excel!Excel.Interfaces.PivotItemUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#isExpanded:member'
     summary: |-
-      <span data-ttu-id="424fd-104">确定是展开项以显示子项还是折叠项并隐藏子项。</span><span class="sxs-lookup"><span data-stu-id="424fd-104">Determines whether the item is expanded to show child items or if it's collapsed and child items are hidden.</span></span>
+      <span data-ttu-id="277b5-103">确定是展开项以显示子项还是折叠项并隐藏子项。</span><span class="sxs-lookup"><span data-stu-id="277b5-103">Determines whether the item is expanded to show child items or if it's collapsed and child items are hidden.</span></span>
 
-      <span data-ttu-id="424fd-105">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="424fd-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="277b5-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="277b5-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: isExpanded
     fullName: isExpanded
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="424fd-106">PivotItem 的名称。</span><span class="sxs-lookup"><span data-stu-id="424fd-106">Name of the PivotItem.</span></span>
+      <span data-ttu-id="277b5-105">PivotItem 的名称。</span><span class="sxs-lookup"><span data-stu-id="277b5-105">Name of the PivotItem.</span></span>
 
-      <span data-ttu-id="424fd-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="424fd-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="277b5-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="277b5-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -44,9 +44,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="424fd-108">确定 PivotItem 是否可见。</span><span class="sxs-lookup"><span data-stu-id="424fd-108">Determines whether the PivotItem is visible or not.</span></span>
+      <span data-ttu-id="277b5-107">确定 PivotItem 是否可见。</span><span class="sxs-lookup"><span data-stu-id="277b5-107">Determines whether the PivotItem is visible or not.</span></span>
 
-      <span data-ttu-id="424fd-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="424fd-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="277b5-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="277b5-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: visible
     fullName: visible
     langs:
