--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.presetcriteriaconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.presetcriteriaconditionalformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.PresetCriteriaConditionalFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="4688f-101">代表 "预置条件" 条件格式，如 "高于平均值"、"唯一值"、"空白"、"非空"、"错误" 和 "noerror"。</span><span class="sxs-lookup"><span data-stu-id="4688f-101">Represents the the preset criteria conditional format such as above average, below average, unique values, contains blank, nonblank, error, and noerror.</span></span>
+      <span data-ttu-id="6114b-101">代表 "预置条件" 条件格式，如 "高于平均值"、"唯一值"、"空白"、"非空"、"错误" 和 "noerror"。</span><span class="sxs-lookup"><span data-stu-id="6114b-101">Represents the the preset criteria conditional format such as above average, below average, unique values, contains blank, nonblank, error, and noerror.</span></span>
 
-      <span data-ttu-id="4688f-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4688f-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6114b-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6114b-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.PresetCriteriaConditionalFormatLoadOptions
     fullName: Excel.Interfaces.PresetCriteriaConditionalFormatLoadOptions
     langs:
@@ -16,6 +16,7 @@ items:
       - 'excel!Excel.Interfaces.PresetCriteriaConditionalFormatLoadOptions#format:member'
       - 'excel!Excel.Interfaces.PresetCriteriaConditionalFormatLoadOptions#rule:member'
   - uid: 'excel!Excel.Interfaces.PresetCriteriaConditionalFormatLoadOptions#$all:member'
+    summary: '<span data-ttu-id="6114b-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="6114b-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="6114b-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="6114b-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="6114b-105">).</span><span class="sxs-lookup"><span data-stu-id="6114b-105"></span></span>'
     name: $all
     fullName: $all
     langs:
@@ -28,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PresetCriteriaConditionalFormatLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="4688f-103">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="4688f-103">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
+      <span data-ttu-id="6114b-106">返回一个 format 对象，该对象封装条件格式字体、填充、边框和其他属性。</span><span class="sxs-lookup"><span data-stu-id="6114b-106">Returns a format object, encapsulating the conditional formats font, fill, borders, and other properties.</span></span>
 
-      <span data-ttu-id="4688f-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4688f-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6114b-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6114b-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -43,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ConditionalRangeFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.PresetCriteriaConditionalFormatLoadOptions#rule:member'
     summary: |-
-      <span data-ttu-id="4688f-105">条件格式的规则。</span><span class="sxs-lookup"><span data-stu-id="4688f-105">The rule of the conditional format.</span></span>
+      <span data-ttu-id="6114b-108">条件格式的规则。</span><span class="sxs-lookup"><span data-stu-id="6114b-108">The rule of the conditional format.</span></span>
 
-      <span data-ttu-id="4688f-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4688f-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="6114b-109">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6114b-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: rule
     fullName: rule
     langs:
